<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/til_fname">

        <EditText
            android:id="@+id/et_fname"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/edtx"
            android:inputType="textPersonName"
            android:textAllCaps="true"
            android:textColorHint="@color/black"
            android:textStyle="italic"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            android:textSize="20dp"
            app:counterTextColor="@color/purple_200"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/heart" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/til_lname">
    <EditText
        android:id="@+id/et_lname"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:counterTextColor="@color/purple_200"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textSize="20dp"
        app:endIconMode="clear_text"
        app:startIconDrawable="@drawable/heart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edtx1"
        android:autofillHints=""
        android:layout_marginTop="10dp"
        android:textAllCaps="true"
        android:maxLines="1"
        android:textStyle="italic"
        android:textColorHint="@color/black"
        android:inputType="textPersonName"
        />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/til_number">
    <EditText
        android:id="@+id/et_number"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:counterTextColor="@color/purple_200"
        app:endIconMode="clear_text"
        app:startIconDrawable="@drawable/heart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:hint="@string/edtx2"
        android:autofillHints=""
        android:maxLines="1"
        android:layout_marginTop="10dp"
        android:textStyle="italic"
        android:textColorHint="@color/black"
        android:inputType="phone"
        android:maxLength="10"
        />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/til_email">

    <EditText
        android:id="@+id/et_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:counterTextColor="@color/purple_200"
        app:endIconMode="clear_text"
        app:startIconDrawable="@drawable/heart"
        android:textSize="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edtx3"
        android:maxLines="1"
        android:layout_marginTop="10dp"
        android:textColorHint="@color/black"
        android:textStyle="italic"
        android:inputType="textEmailAddress"
        />
    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rb_group"
        android:orientation="horizontal"
        android:weightSum="1"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="-1dp"
            android:layout_gravity=""
            android:text="@string/edt"
            android:layout_marginLeft="10dp"
            android:textColor="#000000"
            android:textSize="20sp"
            />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rb_male"
            android:text="@string/edt1"
            android:textSize="20sp"
            android:layout_weight=".5"
            android:checked="false"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rb_female"
            android:text="@string/edt2"
            android:textSize="20sp"
            android:layout_weight=".5"
            />


    </RadioGroup>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/ed"
        android:layout_marginLeft="10dp"
        android:textColor="#000000"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cb_Item1"
            android:layout_width="130dp"
            android:layout_height="55dp"
            android:layout_margin="10dp"
            android:text="@string/ed1" />

        <CheckBox
            android:id="@+id/cb_Item2"
            android:layout_width="100dp"
            android:layout_height="55dp"
            android:layout_margin="10dp"
            android:text="@string/ed2" />

        <CheckBox
            android:id="@+id/cb_Item3"
            android:layout_width="130dp"
            android:layout_height="55dp"
            android:layout_margin="10dp"
            android:text="@string/ed3" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <CheckBox
            android:id="@+id/cb_Item4"
            android:layout_width="130dp"
            android:layout_height="55dp"
            android:layout_margin="10dp"
            android:text="@string/ed4" />

        <CheckBox
            android:id="@+id/cb_Item5"
            android:layout_width="100dp"
            android:layout_height="55dp"
            android:layout_margin="10dp"
            android:text="@string/ed5" />

        <CheckBox
            android:id="@+id/cb_Item6"
            android:layout_width="130dp"
            android:layout_height="55dp"
            android:layout_margin="10dp"
            android:text="@string/ed6" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <CheckBox
            android:layout_width="130dp"
            android:layout_height="55dp"
            android:layout_margin="10dp"
            android:id="@+id/cb_Item7"
            android:text="@string/ed7"
            />

        <CheckBox
            android:layout_width="100dp"
            android:layout_height="55dp"
            android:layout_margin="10dp"
            android:id="@+id/cb_Item8"
            android:text="@string/ed8"
            />
        <CheckBox
            android:layout_width="130dp"
            android:layout_height="55dp"
            android:layout_margin="10dp"
            android:id="@+id/cb_Item9"
            android:text="@string/ed9"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        >
        <Button
            android:id="@+id/btn_submit"
            style="@style/Animation.Design.BottomSheetDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ed10"
            android:layout_marginTop="10dp"
            android:enabled="true"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"
            android:textColorHint="@color/black"
            android:textSize="15sp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        >

        <Button
            android:id="@+id/btn_reset"
            style="@style/Animation.Design.BottomSheetDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ed11"
            android:layout_marginTop="10dp"
            android:enabled="true"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"
            android:textColorHint="@color/black"
            android:textSize="15sp"
            />

    </LinearLayout>

</LinearLayout>